Ignore case from dataProviderID property in dbi file Case: SVY-1214